# murml

./: .env.example  .gitignore  LICENSE  README.md  build_app.sh  launcher.c  pyproject.toml  requirements.txt  run.sh  tray-icon.pxd
murml/: __init__.py  __main__.py  engine.py  history.py  hotkey.py  indicator.py  instance.py  paster.py  recorder.py  sounds.py  transcriber.py  tray.py  tray_spinner.py
sounds/: README.md
tools/: build_marble_tray_icon.py  render_tray_icon.py
